[package]
name = "admin-app"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>", "Nicolas Stalder <nicolas@solokeys.com>"]
repository = "https://github.com/solokeys/admin-app"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Administrative Trussed app for SoloKeys Solo 2 security keys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apdu-app = "0.1"
cbor-smol = { version = "0.5.0", features = ["heapless-v0-7", "heapless-bytes-v0-3"] }
ctaphid-app = "0.1.0-rc.1"
delog = "0.1"
heapless = "0.7"
heapless-bytes = "0.3"
iso7816 = "0.1"
littlefs2 = { version = "0.5", optional = true }
littlefs2-core = { version = "0.1", features = ["heapless-bytes03"] }
serde = { version = "1.0.180", default-features = false }
strum_macros = "0.25.2"
trussed = { version = "0.1", default-features = false }
trussed-core = { version = "0.1.0-rc.1", features = ["crypto-client", "filesystem-client", "management-client", "ui-client"] }

embedded-hal = { version = "0.2.7", optional = true }
hex-literal = "0.4.1"
rand_chacha = { version = "0.3.1", optional = true, default-features = false }
trussed-manage = { version = "0.1.0" }
trussed-se050-manage = { version = "0.1.0", optional = true }

[features]
default = []
se050 = ["trussed-se050-manage"]

factory-reset = []
log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

# Utils to test migration
migration-tests = ["dep:littlefs2"]

[patch.crates-io]
trussed = { git = "https://github.com/trussed-dev/trussed.git", rev = "f5d4af2733a33305d044f763f12dc31d417b57ee" }
trussed-core = { git = "https://github.com/trussed-dev/trussed.git", rev = "f5d4af2733a33305d044f763f12dc31d417b57ee" }
ctaphid-app = { git = "https://github.com/trussed-dev/ctaphid-dispatch.git", branch = "heapless-bytes" }
trussed-manage = { git = "https://github.com/trussed-dev/trussed-staging.git", rev = "9355f700831c1a278c334f76382fbf98d82aedcd" }
trussed-se050-manage = { git = "https://github.com/Nitrokey/trussed-se050-backend.git", branch = "trussed-core" }
