[package]
name = "admin-app"
version = "0.1.0"
authors = ["Conor Patrick <conor@solokeys.com>", "Nicolas Stalder <nicolas@solokeys.com>"]
repository = "https://github.com/solokeys/admin-app"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Administrative Trussed app for SoloKeys Solo 2 security keys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apdu-app = "0.1"
cbor-smol = { version = "0.5.0", features = ["heapless-v0-9", "heapless-bytes-v0-5"] }
ctaphid-app = "0.1.0"
delog = "0.1"
heapless = "0.9"
heapless-bytes = { version = "0.5", features = ["heapless-0.9"] }
iso7816 = "0.2"
littlefs2 = { version = "0.7", optional = true }
littlefs2-core = { version = "0.1", features = ["heapless-bytes05"] }
serde = { version = "1.0.180", default-features = false }
strum_macros = "0.25.2"
trussed = { version = "0.1", default-features = false }
trussed-core = { version = "0.1.0", features = ["crypto-client", "filesystem-client", "management-client", "ui-client"] }

embedded-hal = { version = "0.2.7", optional = true }
hex-literal = "0.4.1"
rand_chacha = { version = "0.3.1", optional = true, default-features = false }
trussed-manage = { version = "0.2.0" }
trussed-se050-manage = { version = "0.2.0", optional = true }

[features]
default = []
se050 = ["trussed-se050-manage"]

factory-reset = []
log-all = []
log-trace = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

# Utils to test migration
migration-tests = ["dep:littlefs2"]

[patch.crates-io]
trussed = { git = "https://github.com/trussed-dev/trussed.git", rev = "1e7b09a983dc8ae64a7ad8401ce541a9a77e5939" }
trussed-core = { git = "https://github.com/trussed-dev/trussed.git", rev = "1e7b09a983dc8ae64a7ad8401ce541a9a77e5939" }
ctaphid-app = { git = "https://github.com/trussed-dev/ctaphid-dispatch.git", rev = "f11fdcbc62d06b8be23e6cbae21bcfefd52c0661" }
trussed-manage = { git = "https://github.com/trussed-dev/trussed-staging.git", rev = "eff09d1613641531630d962f81136f64f3dd2716" }
littlefs2 = { git = "https://github.com/trussed-dev/littlefs2.git", rev = "e9d3a1ca98f80e92cd20ee9b94707067810b9036" }
littlefs2-core = { git = "https://github.com/trussed-dev/littlefs2.git", rev = "e9d3a1ca98f80e92cd20ee9b94707067810b9036" }
littlefs2-sys = { git = "https://github.com/trussed-dev/littlefs2-sys", rev = "v0.3.1-nitrokey.1" }
salty = { git = "https://github.com/ycrypto/salty.git", rev = "ae17f04ec965913e08032d266f6a47c001031f06" }
apdu-app = { git = "https://github.com/trussed-dev/apdu-dispatch.git", rev = "931c4269d1d293954fae2012d809e9663cd2cb7e" }
